<resources>
    <string name="app_name">Letropia</string>

    <!-- Activity Main -->
    <string name="title_toolbar_main">Letropia</string>
    <string name="btn_start">Iniciar</string>
    <string name="hint_spinner_letras">Número de letras</string>


    <!-- Activity Word -->
    <string name="title_toolbar_word">Acerte a palavra</string>
    <string name="btn_validate">Validar</string>
    <string name="btn_new_word">Nova Palavra</string>

</resources>