<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WordActivity">

    <!-- Toolbar com ícone de voltar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_word"
        style="@style/Widget.Letropia.Toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/white"
        app:title="@string/title_toolbar_word"
        app:titleTextAppearance="@style/TextAppearance.Letropia.Toolbar.Title"
        app:titleTextColor="@android:color/white" />


    <!-- Palavra embaralhada -->
    <TextView
        android:id="@+id/tvScrambled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Exemplo"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/rvLetters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_word"
        app:layout_constraintVertical_chainStyle="packed" />


    <!-- RecyclerView horizontal de N EditText -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLetters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNewWord"
        app:layout_constraintEnd_toStartOf="@+id/btnValidate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScrambled" />


    <!-- Botão Validar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnValidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_validate"
        app:cornerRadius="8dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/rvLetters"
        app:layout_constraintBottom_toBottomOf="@id/rvLetters"
        app:layout_constraintStart_toEndOf="@id/rvLetters"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Botão Nova palavra -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewWord"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_new_word"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/rvLetters"
        app:layout_constraintBottom_toTopOf="@id/frameBanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- FrameLayout fixo para AdMob -->
    <FrameLayout
        android:id="@+id/frameBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>