<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    tools:context=".view.MainActivity">

    <!-- 1) Toolbar fixa no topo -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_main"
        style="@style/Widget.Letropia.Toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_toolbar_main"
        app:titleTextAppearance="@style/TextAppearance.Letropia.Toolbar.Title"
        app:titleTextColor="@android:color/white" />

    <!-- 2) Botão “Iniciar” -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIniciar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_btn_start"
        android:paddingHorizontal="@dimen/padding_horizontal_start_main"
        android:paddingVertical="@dimen/padding_vertical_btn_start_main"
        android:text="@string/btn_start"
        android:textSize="@dimen/text_size_btn_start_main"
        app:backgroundTint="@null"
        app:backgroundTintMode="src_over"
        app:cornerRadius="@dimen/corner_radius_btn_start_main"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeWidth="0dp" />

    <!-- 3) Spinner de seleção de número de letras -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_spinner_main"
        android:layout_marginTop="@dimen/margin_top_spinner_main"
        app:boxBackgroundColor="@color/gray_light"
        app:boxStrokeColor="@color/teal_700"
        app:endIconMode="dropdown_menu"
        app:layout_constraintBottom_toTopOf="@id/frameBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIniciar">

        <AutoCompleteTextView
            android:id="@+id/spinnerLetras"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/hint_spinner_letras"
            android:inputType="none"
            android:padding="@dimen/padding_spinner_main"
            android:textColor="@color/teal_anim_end"
            android:textColorHint="@color/teal_anim_end"
            android:textSize="@dimen/text_size_spinner_main" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- FrameLayout fixo para AdMob -->
    <FrameLayout
        android:id="@+id/frameBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>